--- a/app/Resources/views/report/product_stock/grid.html.twig
+++ b/app/Resources/views/report/product_stock/grid.html.twig
@@ -19,21 +19,21 @@
     <table class="report-data">
         <thead class="border-top-solid-bold border-bottom-solid-bold">
             <tr>
-                <th class="text-center">Nama</th>
-                <th class="text-center">Ukuran</th>
-                <th class="text-center">Merk</th>
-                <th class="text-center">Kategori</th>
-                <th class="text-center">Stok</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Nama</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Ukuran</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Merk</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Kategori</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Stok</th>
             </tr>
         </thead>
         <tbody class="border-top-solid-bold border-bottom-solid-bold">
             {% for product in grid.data %}
-                <tr data-field-id="{{ product.id }}">
-                    <td class="text-left">{{ product.name|default }}</td>
-                    <td class="text-left">{{ product.size|default }}</td>
-                    <td class="text-left">{{ product.brand.name|default }}</td>
-                    <td class="text-left">{{ product.productCategory.name|default }}</td>
-                    <td class="text-center">{{ inventoryRepository.getStockByProduct(product)|default }}</td>
+                <tr class="border-top-solid-normal border-bottom-solid-normal" data-field-id="{{ product.id }}">
+                    <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.name|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.size|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.brand.name|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.productCategory.name|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getStockByProduct(product)|default }}</td>
                 </tr>
             {% endfor %}
         </tbody>
