--- a/app/Resources/views/report/product_purchase_invoice/grid.html.twig
+++ b/app/Resources/views/report/product_purchase_invoice/grid.html.twig
@@ -34,7 +34,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <th class="text-center">Invoice #</th>
+                                <th class="text-center">Supplier Invoice #</th>
                                 <th class="text-center">Tanggal</th>
                                 <th class="text-center">Supplier</th>
                                 <th class="text-center">Qty</th>
@@ -62,7 +62,7 @@
                             <tbody>
                                 {% for purchaseInvoiceDetail in product.purchaseInvoiceDetails %}
                                     <tr>
-                                        <td class="text-left">{{ purchaseInvoiceDetail.purchaseInvoiceHeader.codeNumber|default }}</td>
+                                        <td class="text-left">{{ purchaseInvoiceDetail.purchaseInvoiceHeader.supplierInvoice|default }}</td>
                                         <td class="text-left">{{ purchaseInvoiceDetail.purchaseInvoiceHeader.transactionDate|default ? purchaseInvoiceDetail.purchaseInvoiceHeader.transactionDate|date('j F Y') }}</td>
                                         <td class="text-left">{{ purchaseInvoiceDetail.purchaseInvoiceHeader.supplier.company|default }}</td>
                                         <td class="text-center">{{ purchaseInvoiceDetail.quantity|default }}</td>
