rename custom.css to main.css in app public directory rename custom.js to main.js in app public directory modify .gitignore (add web/css, web/images, web/js) modify base html view (change css reference) modify all report index view (change css reference) modify all memo view (change css reference)

--- a/app/Resources/views/report/adjustment_stock_header/index.html.twig
+++ b/app/Resources/views/report/adjustment_stock_header/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block stylesheets_include %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('../app/Resources/public/css/report.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/report.css') }}" />
 {% endblock %}
 
 {% block stylesheets %}
