--- a/app/Resources/views/report/sale_return_header/index.html.twig
+++ b/app/Resources/views/report/sale_return_header/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block stylesheets_include %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('../app/Resources/public/css/report.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/report.css') }}" />
 {% endblock %}
 
 {% block stylesheets %}
