--- a/app/Resources/views/transaction/sale_invoice_header/memo_invoice.html.twig
+++ b/app/Resources/views/transaction/sale_invoice_header/memo_invoice.html.twig
@@ -143,7 +143,7 @@
 {% endblock %}
 
 {% block stylesheets_include %}
-    <link rel="stylesheet" href="{{ asset('../app/Resources/public/css/memo.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/memo.css') }}" />
 {% endblock %}
 
 {% block javascripts_include %}{% endblock %}
