Fix reports and accounting transactions

--- a/app/Resources/views/transaction/purchase_invoice_header/show.html.twig
+++ b/app/Resources/views/transaction/purchase_invoice_header/show.html.twig
@@ -92,4 +92,8 @@
             </tr>
         </tfoot>
     </table>
+    
+    <a target="_blank" class="btn btn-info" href="{{ path('transaction_purchase_invoice_header_memo', {'id': purchaseInvoiceHeader.id, 'show': true}) }}">
+        <span class="glyphicon glyphicon-print"></span> Print PO
+    </a>
 {% endblock %}
