--- a/app/Resources/views/transaction/sale_invoice_header/export.xml.twig
+++ b/app/Resources/views/transaction/sale_invoice_header/export.xml.twig
@@ -59,6 +59,9 @@
                 <ss:Cell>
                     <ss:Data ss:Type="String">REFERENSI</ss:Data>
                 </ss:Cell>
+                <ss:Cell>
+                    <ss:Data ss:Type="String">KODE_DOKUMEN_PENDUKUNG</ss:Data>
+                </ss:Cell>
             </ss:Row>
             <ss:Row>
                 <ss:Cell>
@@ -150,7 +153,7 @@
                         <ss:Data ss:Type="String">01</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="String">0</ss:Data>
+                        <ss:Data ss:Type="String">01</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
                         <ss:Data ss:Type="String">{{ invoiceNumber }}</ss:Data>
@@ -178,6 +181,9 @@
                     </ss:Cell>
                     <ss:Cell>
                         <ss:Data ss:Type="Number">{{ saleInvoiceHeader.taxNominal|default|number_format(0, '.', '') }}</ss:Data>
+                    </ss:Cell>
+                    <ss:Cell>
+                        <ss:Data ss:Type="Number">0</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
                         <ss:Data ss:Type="Number">0</ss:Data>
