Modify form transactions

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{{ path('homepage') }}">My Company</a>
+        <a class="navbar-brand" href="{{ path('homepage') }}">PT Trio Prima Sukses Makmur</a>
     </div>
     <div class="navbar-text">|</div>
     <div class="navbar-collapse">
