--- a/app/Resources/views/transaction/purchase_invoice_header/show.html.twig
+++ b/app/Resources/views/transaction/purchase_invoice_header/show.html.twig
@@ -93,7 +93,7 @@
         </tfoot>
     </table>
     
-    <a target="_blank" class="btn btn-info" href="{{ path('transaction_purchase_invoice_header_memo', {'id': purchaseInvoiceHeader.id, 'show': true}) }}">
+    <a target="_blank" class="btn btn-info" href="{{ path('transaction_purchase_invoice_header_memo', {'id': purchaseInvoiceHeader.id}) }}">
         <span class="glyphicon glyphicon-print"></span> Print PO
     </a>
 {% endblock %}
