Modify form transactions

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="well text-center" style="margin: 0">
-    Copyright &copy; 2017 My Company.<br />
+    Copyright &copy; 2017 PT Trio Prima Sukses Makmur.<br />
     All Rights Reserved.<br />
-    Powered by <a href="http://www.symfony.com">Symfony Framework</a>.
+    Powered by <a href="http://www.bloomingtech.com">BloomingTech</a>.
 </div>
