--- a/app/Resources/views/report/purchase_invoice_summary/index.html.twig
+++ b/app/Resources/views/report/purchase_invoice_summary/index.html.twig
@@ -19,10 +19,12 @@
         table.report-data > thead > tr > th:nth-child(2),
         table.report-data > tbody > tr > td:nth-child(2) { width: 15% }
         table.report-data > thead > tr > th:nth-child(3),
-        table.report-data > tbody > tr > td:nth-child(3) { width: 30% }
+        table.report-data > tbody > tr > td:nth-child(3) { width: 25% }
         table.report-data > thead > tr > th:nth-child(4),
-        table.report-data > tbody > tr > td:nth-child(4) { width: 20% }
+        table.report-data > tbody > tr > td:nth-child(4) { width: 15% }
         table.report-data > thead > tr > th:nth-child(5),
-        table.report-data > tbody > tr > td:nth-child(5) { width: 20% }
+        table.report-data > tbody > tr > td:nth-child(5) { width: 15% }
+        table.report-data > thead > tr > th:nth-child(5),
+        table.report-data > tbody > tr > td:nth-child(5) { width: 15% }
     </style>
 {% endblock %}
