--- a/app/Resources/views/report/product_stock/grid.html.twig
+++ b/app/Resources/views/report/product_stock/grid.html.twig
@@ -24,6 +24,8 @@
                 <th class="border-left-solid-bold border-right-solid-bold text-center">Merk</th>
                 <th class="border-left-solid-bold border-right-solid-bold text-center">Kategori</th>
                 <th class="border-left-solid-bold border-right-solid-bold text-center">Stok</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Unit Price</th>
+                <th class="border-left-solid-bold border-right-solid-bold text-center">Total</th>
             </tr>
         </thead>
         <tbody class="border-top-solid-bold border-bottom-solid-bold">
@@ -34,6 +36,8 @@
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.brand.name|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.productCategory.name|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getStockByProduct(product)|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getUnitPriceByProduct(product)|default|number_format(2) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getTotalPriceByProduct(product)|default|number_format(2) }}</td>
                 </tr>
             {% endfor %}
         </tbody>
