--- a/app/Resources/views/report/product_stock/index.html.twig
+++ b/app/Resources/views/report/product_stock/index.html.twig
@@ -15,14 +15,18 @@
     {{ parent() }}
     <style>
         table.report-data > thead > tr > th:nth-child(1),
-        table.report-data > tbody > tr > td:nth-child(1) { width: 30% }
+        table.report-data > tbody > tr > td:nth-child(1) { width: 25% }
         table.report-data > thead > tr > th:nth-child(2),
         table.report-data > tbody > tr > td:nth-child(2) { width: 15% }
         table.report-data > thead > tr > th:nth-child(3),
-        table.report-data > tbody > tr > td:nth-child(3) { width: 20% }
+        table.report-data > tbody > tr > td:nth-child(3) { width: 10% }
         table.report-data > thead > tr > th:nth-child(4),
-        table.report-data > tbody > tr > td:nth-child(4) { width: 20% }
+        table.report-data > tbody > tr > td:nth-child(4) { width: 10% }
         table.report-data > thead > tr > th:nth-child(5),
-        table.report-data > tbody > tr > td:nth-child(5) { width: 15% }
+        table.report-data > tbody > tr > td:nth-child(5) { width: 10% }
+        table.report-data > thead > tr > th:nth-child(6),
+        table.report-data > tbody > tr > td:nth-child(6) { width: 15% }
+        table.report-data > thead > tr > th:nth-child(7),
+        table.report-data > tbody > tr > td:nth-child(7) { width: 15% }
     </style>
 {% endblock %}
