--- a/app/Resources/views/report/inventory_transaction/grid.html.twig
+++ b/app/Resources/views/report/inventory_transaction/grid.html.twig
@@ -41,10 +41,10 @@
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.size|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.brand.name|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.productCategory.name|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getQuantityInByProduct(product, startDate, endDate)|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getQuantityOutByProduct(product, startDate, endDate)|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getInventoryStockByProduct(product, startDate, endDate)|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getTotalPriceByProduct(product, startDate, endDate)|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getQuantityInByProduct(product, startDate, endDate)|default|number_format(0) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getQuantityOutByProduct(product, startDate, endDate)|default|number_format(0) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getStockByProduct(product, startDate, endDate)|default|number_format(0) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getTotalPriceByProduct(product, startDate, endDate)|default|number_format(2) }}</td>
                 </tr>
             {% endfor %}
         </tbody>
