--- a/app/Resources/views/report/inventory_transaction/export.xml.twig
+++ b/app/Resources/views/report/inventory_transaction/export.xml.twig
@@ -47,8 +47,16 @@
                 <ss:Cell>
                     <ss:Data ss:Type="String">Harga</ss:Data>
                 </ss:Cell>
+                <ss:Cell>
+                    <ss:Data ss:Type="String">Total</ss:Data>
+                </ss:Cell>
             </ss:Row>
             {% for product in grid.data %}
+                {% set quantityIn = inventoryRepository.getQuantityInByProduct(product, startDate, endDate) %}
+                {% set quantityOut = inventoryRepository.getQuantityOutByProduct(product, startDate, endDate) %}
+                {% set quantityStock = inventoryRepository.getStockByProduct(product, startDate, endDate) %}
+                {% set averagePrice = inventoryRepository.getTotalPriceByProduct(product, startDate, endDate) %}
+                {% set totalPrice = quantityStock * averagePrice %}
                 <ss:Row ss:StyleID="Level1">
                     <ss:Cell ss:Index="1">
                         <ss:Data ss:Type="String">{{ product.name|default }}</ss:Data>
@@ -63,16 +71,19 @@
                         <ss:Data ss:Type="String">{{ product.productCategory.name|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getQuantityInByProduct(product, startDate, endDate)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ quantityIn|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getQuantityOutByProduct(product, startDate, endDate)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ quantityOut|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getInventoryStockByProduct(product, startDate, endDate)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ quantityStock|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getTotalPriceByProduct(product, startDate, endDate)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ averagePrice|default }}</ss:Data>
+                    </ss:Cell>
+                    <ss:Cell>
+                        <ss:Data ss:Type="Number">{{ totalPrice|default }}</ss:Data>
                     </ss:Cell>
                 </ss:Row>
             {% endfor %}
