--- a/app/Resources/views/report/inventory_transaction/index.html.twig
+++ b/app/Resources/views/report/inventory_transaction/index.html.twig
@@ -15,13 +15,13 @@
     {{ parent() }}
     <style>
         table.report-data > thead > tr > th:nth-child(1),
-        table.report-data > tbody > tr > td:nth-child(1) { width: 20% }
+        table.report-data > tbody > tr > td:nth-child(1) { width: 25% }
         table.report-data > thead > tr > th:nth-child(2),
-        table.report-data > tbody > tr > td:nth-child(2) { width: 15% }
+        table.report-data > tbody > tr > td:nth-child(2) { width: 14% }
         table.report-data > thead > tr > th:nth-child(3),
-        table.report-data > tbody > tr > td:nth-child(3) { width: 15% }
+        table.report-data > tbody > tr > td:nth-child(3) { width: 10% }
         table.report-data > thead > tr > th:nth-child(4),
-        table.report-data > tbody > tr > td:nth-child(4) { width: 15% }
+        table.report-data > tbody > tr > td:nth-child(4) { width: 10% }
         table.report-data > thead > tr > th:nth-child(5),
         table.report-data > tbody > tr > td:nth-child(5) { width: 7% }
         table.report-data > thead > tr > th:nth-child(6),
@@ -29,6 +29,8 @@
         table.report-data > thead > tr > th:nth-child(7),
         table.report-data > tbody > tr > td:nth-child(7) { width: 7% }
         table.report-data > thead > tr > th:nth-child(8),
-        table.report-data > tbody > tr > td:nth-child(8) { width: 15% }
+        table.report-data > tbody > tr > td:nth-child(8) { width: 10% }
+        table.report-data > thead > tr > th:nth-child(9),
+        table.report-data > tbody > tr > td:nth-child(9) { width: 10% }
     </style>
 {% endblock %}
